@@ -310,6 +310,9 @@ domibus.entityManagerFactory.jpaProperty.hibernate.transaction.jta.platform=org.
 #Format of xsd:datetime used for AS4Receipt
 #domibus.datetime.pattern.onsending=yyyy-MM-dd'T'HH:mm:ss.SSS'Z'
 
+#Validate PartyInfo From/To initiator and responder roles. This property helps maintaining backwards compatibility. It is recommended to be enabled. By default enabled.
+#domibus.partyinfo.roles.validation.enabled=true
+
 # ---------------------------------- Dispatcher --------------------------------
 
 #Timeout values for communication between the access points
