@@ -223,6 +223,9 @@ domain_name.domibus.database.schema=domain_name_schema
 #Accepted Format for MessageId (Default value, based on RFC2822 [CORE 5.2.2.1]: ^[\\x20-\\x7E]*$ )
 #domain_name.domibus.sendMessage.messageIdPattern=^[\\x20-\\x7E]*$
 
+#Validate PartyInfo From/To initiator and responder roles. This property helps maintaining backwards compatibility. It is recommended to be enabled. By default enabled.
+#domibus.partyinfo.roles.validation.enabled=true
+
 # ---------------------------------- Dispatcher --------------------------------
 
 #Timeout values for communication between the access points
