@@ -390,6 +390,9 @@ domibus.sender.trust.validation.truststore_alias=true
 #Accepted Format for MessageId (Default value, based on RFC2822 [CORE 5.2.2.1]: ^[\\x20-\\x7E]*$ )
 domibus.sendMessage.messageIdPattern=^[\\x20-\\x7E]*$
 
+#Validate PartyInfo From/To initiator and responder roles. This property helps maintaining backwards compatibility. It is recommended to be enabled. By default enabled.
+domibus.partyinfo.roles.validation.enabled=true
+
 # ---------------------------------- Various -----------------------------------
 
 #The factory for creating SOAPMessage objects
